scripts/deployment/openshift/web/nginx/nginx-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx
  namespace: web
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: nginx
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: 'jimdevops/my-images:nginx-prod'
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: pull-secret-jsc2
