scripts/deployment/openshift/web/nginx/nginx-service-external.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx-external
  namespace: web
  labels:
    app: nginx
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: nginx
