scripts/deployment/openshift/web/nginx/nginx-service-internal.yml
apiVersion: v1
kind: Service
metadata:
  namespace: web
  name: nginx
  labels:
    app: nginx
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: nginx
