scripts/deployment/openshift/web/nginx/nginx-route-external.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: resourcelocker #This is also the prefix for the generated URL
  namespace: web
  labels:
    app: nginx
spec:
  to:
    kind: Service
    name: nginx
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
